* added multithread options to Tom, and bootstrap